generated_bindings.dart

// ignore_for_file: unused_element, unused_field

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
import 'dart:ffi' as ffi;

/// Bindings to libfuse
class DartFuse {
  /// Holds the Dynamic library.
  final ffi.DynamicLibrary _dylib;

  /// The symbols are looked up in [dynamicLibrary].
  DartFuse(ffi.DynamicLibrary dynamicLibrary) : _dylib = dynamicLibrary;

  /// Create a FUSE mountpoint
  ///
  /// Returns a control file descriptor suitable for passing to
  /// fuse_new()
  ///
  /// @param mountpoint the mount point path
  /// @param args argument vector
  /// @return the communication channel on success, NULL on failure
  ffi.Pointer<fuse_chan> fuse_mount(
    ffi.Pointer<ffi.Int8> mountpoint,
    ffi.Pointer<fuse_args> args,
  ) {
    return (_fuse_mount ??=
        _dylib.lookupFunction<_c_fuse_mount, _dart_fuse_mount>('fuse_mount'))(
      mountpoint,
      args,
    );
  }

  _dart_fuse_mount? _fuse_mount;

  /// Umount a FUSE mountpoint
  ///
  /// @param mountpoint the mount point path
  /// @param ch the communication channel
  void fuse_unmount(
    ffi.Pointer<ffi.Int8> mountpoint,
    ffi.Pointer<fuse_chan> ch,
  ) {
    return (_fuse_unmount ??= _dylib
        .lookupFunction<_c_fuse_unmount, _dart_fuse_unmount>('fuse_unmount'))(
      mountpoint,
      ch,
    );
  }

  _dart_fuse_unmount? _fuse_unmount;

  /// Parse common options
  ///
  /// The following options are parsed:
  ///
  /// '-f'	     foreground
  /// '-d' '-odebug'  foreground, but keep the debug option
  /// '-s'	     single threaded
  /// '-h' '--help'   help
  /// '-ho'	     help without header
  /// '-ofsname=..'   file system name, if not present, then set to the program
  /// name
  ///
  /// All parameters may be NULL
  ///
  /// @param args argument vector
  /// @param mountpoint the returned mountpoint, should be freed after use
  /// @param multithreaded set to 1 unless the '-s' option is present
  /// @param foreground set to 1 if one of the relevant options is present
  /// @return 0 on success, -1 on failure
  int fuse_parse_cmdline(
    ffi.Pointer<fuse_args> args,
    ffi.Pointer<ffi.Pointer<ffi.Int8>> mountpoint,
    ffi.Pointer<ffi.Int32> multithreaded,
    ffi.Pointer<ffi.Int32> foreground,
  ) {
    return (_fuse_parse_cmdline ??=
        _dylib.lookupFunction<_c_fuse_parse_cmdline, _dart_fuse_parse_cmdline>(
            'fuse_parse_cmdline'))(
      args,
      mountpoint,
      multithreaded,
      foreground,
    );
  }

  _dart_fuse_parse_cmdline? _fuse_parse_cmdline;

  /// Go into the background
  ///
  /// @param foreground if true, stay in the foreground
  /// @return 0 on success, -1 on failure
  int fuse_daemonize(
    int foreground,
  ) {
    return (_fuse_daemonize ??=
        _dylib.lookupFunction<_c_fuse_daemonize, _dart_fuse_daemonize>(
            'fuse_daemonize'))(
      foreground,
    );
  }

  _dart_fuse_daemonize? _fuse_daemonize;

  /// Get the version of the library
  ///
  /// @return the version
  int fuse_version() {
    return (_fuse_version ??= _dylib
        .lookupFunction<_c_fuse_version, _dart_fuse_version>('fuse_version'))();
  }

  _dart_fuse_version? _fuse_version;

  /// Destroy poll handle
  ///
  /// @param ph the poll handle
  void fuse_pollhandle_destroy(
    ffi.Pointer<fuse_pollhandle> ph,
  ) {
    return (_fuse_pollhandle_destroy ??= _dylib.lookupFunction<
        _c_fuse_pollhandle_destroy,
        _dart_fuse_pollhandle_destroy>('fuse_pollhandle_destroy'))(
      ph,
    );
  }

  _dart_fuse_pollhandle_destroy? _fuse_pollhandle_destroy;

  /// Get total size of data in a fuse buffer vector
  ///
  /// @param bufv buffer vector
  /// @return size of data
  int fuse_buf_size(
    ffi.Pointer<fuse_bufvec> bufv,
  ) {
    return (_fuse_buf_size ??=
        _dylib.lookupFunction<_c_fuse_buf_size, _dart_fuse_buf_size>(
            'fuse_buf_size'))(
      bufv,
    );
  }

  _dart_fuse_buf_size? _fuse_buf_size;

  /// Copy data from one buffer vector to another
  ///
  /// @param dst destination buffer vector
  /// @param src source buffer vector
  /// @param flags flags controlling the copy
  /// @return actual number of bytes copied or -errno on error
  int fuse_buf_copy(
    ffi.Pointer<fuse_bufvec> dst,
    ffi.Pointer<fuse_bufvec> src,
    int flags,
  ) {
    return (_fuse_buf_copy ??=
        _dylib.lookupFunction<_c_fuse_buf_copy, _dart_fuse_buf_copy>(
            'fuse_buf_copy'))(
      dst,
      src,
      flags,
    );
  }

  _dart_fuse_buf_copy? _fuse_buf_copy;

  /// Exit session on HUP, TERM and INT signals and ignore PIPE signal
  ///
  /// Stores session in a global variable.	 May only be called once per
  /// process until fuse_remove_signal_handlers() is called.
  ///
  /// @param se the session to exit
  /// @return 0 on success, -1 on failure
  int fuse_set_signal_handlers(
    ffi.Pointer<fuse_session> se,
  ) {
    return (_fuse_set_signal_handlers ??= _dylib.lookupFunction<
        _c_fuse_set_signal_handlers,
        _dart_fuse_set_signal_handlers>('fuse_set_signal_handlers'))(
      se,
    );
  }

  _dart_fuse_set_signal_handlers? _fuse_set_signal_handlers;

  /// Restore default signal handlers
  ///
  /// Resets global session.  After this fuse_set_signal_handlers() may
  /// be called again.
  ///
  /// @param se the same session as given in fuse_set_signal_handlers()
  void fuse_remove_signal_handlers(
    ffi.Pointer<fuse_session> se,
  ) {
    return (_fuse_remove_signal_handlers ??= _dylib.lookupFunction<
        _c_fuse_remove_signal_handlers,
        _dart_fuse_remove_signal_handlers>('fuse_remove_signal_handlers'))(
      se,
    );
  }

  _dart_fuse_remove_signal_handlers? _fuse_remove_signal_handlers;

  /// Create a new FUSE filesystem.
  ///
  /// @param ch the communication channel
  /// @param args argument vector
  /// @param op the filesystem operations
  /// @param op_size the size of the fuse_operations structure
  /// @param user_data user data supplied in the context during the init() method
  /// @return the created FUSE handle
  ffi.Pointer<fuse> fuse_new(
    ffi.Pointer<fuse_chan> ch,
    ffi.Pointer<fuse_args> args,
    ffi.Pointer<fuse_operations> op,
    int op_size,
    ffi.Pointer<ffi.Void> user_data,
  ) {
    return (_fuse_new ??=
        _dylib.lookupFunction<_c_fuse_new, _dart_fuse_new>('fuse_new'))(
      ch,
      args,
      op,
      op_size,
      user_data,
    );
  }

  _dart_fuse_new? _fuse_new;

  /// Destroy the FUSE handle.
  ///
  /// The communication channel attached to the handle is also destroyed.
  ///
  /// NOTE: This function does not unmount the filesystem.	 If this is
  /// needed, call fuse_unmount() before calling this function.
  ///
  /// @param f the FUSE handle
  void fuse_destroy(
    ffi.Pointer<fuse> f,
  ) {
    return (_fuse_destroy ??= _dylib
        .lookupFunction<_c_fuse_destroy, _dart_fuse_destroy>('fuse_destroy'))(
      f,
    );
  }

  _dart_fuse_destroy? _fuse_destroy;

  /// FUSE event loop.
  ///
  /// Requests from the kernel are processed, and the appropriate
  /// operations are called.
  ///
  /// @param f the FUSE handle
  /// @return 0 if no error occurred, -1 otherwise
  int fuse_loop(
    ffi.Pointer<fuse> f,
  ) {
    return (_fuse_loop ??=
        _dylib.lookupFunction<_c_fuse_loop, _dart_fuse_loop>('fuse_loop'))(
      f,
    );
  }

  _dart_fuse_loop? _fuse_loop;

  /// Exit from event loop
  ///
  /// @param f the FUSE handle
  void fuse_exit(
    ffi.Pointer<fuse> f,
  ) {
    return (_fuse_exit ??=
        _dylib.lookupFunction<_c_fuse_exit, _dart_fuse_exit>('fuse_exit'))(
      f,
    );
  }

  _dart_fuse_exit? _fuse_exit;

  /// FUSE event loop with multiple threads
  ///
  /// Requests from the kernel are processed, and the appropriate
  /// operations are called.  Request are processed in parallel by
  /// distributing them between multiple threads.
  ///
  /// Calling this function requires the pthreads library to be linked to
  /// the application.
  ///
  /// @param f the FUSE handle
  /// @return 0 if no error occurred, -1 otherwise
  int fuse_loop_mt(
    ffi.Pointer<fuse> f,
  ) {
    return (_fuse_loop_mt ??= _dylib
        .lookupFunction<_c_fuse_loop_mt, _dart_fuse_loop_mt>('fuse_loop_mt'))(
      f,
    );
  }

  _dart_fuse_loop_mt? _fuse_loop_mt;

  /// Get the current supplementary group IDs for the current request
  ///
  /// Similar to the getgroups(2) system call, except the return value is
  /// always the total number of group IDs, even if it is larger than the
  /// specified size.
  ///
  /// The current fuse kernel module in linux (as of 2.6.30) doesn't pass
  /// the group list to userspace, hence this function needs to parse
  /// "/proc/$TID/task/$TID/status" to get the group IDs.
  ///
  /// This feature may not be supported on all operating systems.  In
  /// such a case this function will return -ENOSYS.
  ///
  /// @param size size of given array
  /// @param list array of group IDs to be filled in
  /// @return the total number of supplementary group IDs or -errno on failure
  int fuse_getgroups(
    int size,
    ffi.Pointer<ffi.Uint32> list,
  ) {
    return (_fuse_getgroups ??=
        _dylib.lookupFunction<_c_fuse_getgroups, _dart_fuse_getgroups>(
            'fuse_getgroups'))(
      size,
      list,
    );
  }

  _dart_fuse_getgroups? _fuse_getgroups;

  /// Check if the current request has already been interrupted
  ///
  /// @return 1 if the request has been interrupted, 0 otherwise
  int fuse_interrupted() {
    return (_fuse_interrupted ??=
        _dylib.lookupFunction<_c_fuse_interrupted, _dart_fuse_interrupted>(
            'fuse_interrupted'))();
  }

  _dart_fuse_interrupted? _fuse_interrupted;

  /// Obsolete, doesn't do anything
  ///
  /// @return -EINVAL
  int fuse_invalidate(
    ffi.Pointer<fuse> f,
    ffi.Pointer<ffi.Int8> path,
  ) {
    return (_fuse_invalidate ??=
        _dylib.lookupFunction<_c_fuse_invalidate, _dart_fuse_invalidate>(
            'fuse_invalidate'))(
      f,
      path,
    );
  }

  _dart_fuse_invalidate? _fuse_invalidate;

  int fuse_is_lib_option(
    ffi.Pointer<ffi.Int8> opt,
  ) {
    return (_fuse_is_lib_option ??=
        _dylib.lookupFunction<_c_fuse_is_lib_option, _dart_fuse_is_lib_option>(
            'fuse_is_lib_option'))(
      opt,
    );
  }

  _dart_fuse_is_lib_option? _fuse_is_lib_option;

  /// Start the cleanup thread when using option "remember".
  ///
  /// This is done automatically by fuse_loop_mt()
  /// @param fuse struct fuse pointer for fuse instance
  /// @return 0 on success and -1 on error
  int fuse_start_cleanup_thread(
    ffi.Pointer<fuse> fuse,
  ) {
    return (_fuse_start_cleanup_thread ??= _dylib.lookupFunction<
        _c_fuse_start_cleanup_thread,
        _dart_fuse_start_cleanup_thread>('fuse_start_cleanup_thread'))(
      fuse,
    );
  }

  _dart_fuse_start_cleanup_thread? _fuse_start_cleanup_thread;

  /// Stop the cleanup thread when using option "remember".
  ///
  /// This is done automatically by fuse_loop_mt()
  /// @param fuse struct fuse pointer for fuse instance
  void fuse_stop_cleanup_thread(
    ffi.Pointer<fuse> fuse,
  ) {
    return (_fuse_stop_cleanup_thread ??= _dylib.lookupFunction<
        _c_fuse_stop_cleanup_thread,
        _dart_fuse_stop_cleanup_thread>('fuse_stop_cleanup_thread'))(
      fuse,
    );
  }

  _dart_fuse_stop_cleanup_thread? _fuse_stop_cleanup_thread;

  /// Iterate over cache removing stale entries
  /// use in conjunction with "-oremember"
  ///
  /// NOTE: This is already done for the standard sessions
  ///
  /// @param fuse struct fuse pointer for fuse instance
  /// @return the number of seconds until the next cleanup
  int fuse_clean_cache(
    ffi.Pointer<fuse> fuse,
  ) {
    return (_fuse_clean_cache ??=
        _dylib.lookupFunction<_c_fuse_clean_cache, _dart_fuse_clean_cache>(
            'fuse_clean_cache'))(
      fuse,
    );
  }

  _dart_fuse_clean_cache? _fuse_clean_cache;
